# math-gen-graph

./: .gitignore  README.md  pyproject.toml
src/math_gen_graph/: __init__.py  cache.py  cli.py  client.py  enrichment.py  graph.py  models.py  themes.py
src/math_gen_graph/renderers/: __init__.py  interactive.py  static.py
src/math_gen_graph/renderers/templates/: interactive.html.j2
